--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@reduxjs/toolkit": "^1.9.5",
+    "expo": "^49.0.8",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-reanimated": "^3.4.2",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
